<resources>
    <string name="app_name">PoleTech</string>

    <!--Links-->

    <!--Aliz IP     10.0A.3.2-->
    <!--Sam IP      192.168.A43.80:7778-->
    <!--Web IP      amlakeyekta.ir-->

    <!--<string name="LinkLoginTech">http://10.0.3.2/pol/checklogin.php</string>-->
    <string name="LinkLoginTech">http://amlakeyekta.ir/pol/Tech/selectTech.php</string>
    <string name="LinkForgetPass">http://amlakeyekta.ir/pol/Tech/sms/getPassSmS.php</string>
    <string name="LinkWorks">http://amlakeyekta.ir/pol/Req/requestTech.php</string>
    <string name="LinkAcceptOne">http://amlakeyekta.ir/pol/Req/requestTech_AcceptOne.php</string>
    <string name="LinkWhatIsTheJobAcc2">http://amlakeyekta.ir/pol/Req/requestWhatIsTheJobAcc2.php</string>
    <string name="LinkAcc2">http://amlakeyekta.ir/pol/Req/requestTech_AcceptTwo.php</string>
    <string name="LinkWhatIsTheJobFinished">http://amlakeyekta.ir/pol/Req/requestWhatIsTheJobFinished.php</string>
    <string name="LinkFinishedWithChange">http://amlakeyekta.ir/pol/Req/requestFinishWorkWithChange.php</string>
    <string name="LinkWhatIsTheJobGetMoney">http://amlakeyekta.ir/pol/Req/requestWhatIsTheJobGetMoney.php</string>
    <string name="LinkGetMoney">http://amlakeyekta.ir/pol/Req/requestGetMoneyTech.php</string>
    <string name="LinkDoingJob">http://amlakeyekta.ir/pol/Req/requestTech_DoingJob.php</string>
    <string name="LinkTicket">http://amlakeyekta.ir/pol/Tech/sendticket.php</string>
    <string name="LinkSelectTicket">http://amlakeyekta.ir/pol/Tech/selectticket.php</string>
    <string name="LinkJobsDone">http://amlakeyekta.ir/pol/Req/requestWhatIsTheJobsDone.php</string>


    <!--login Activity-->
    <string name="edtPhoneNumber">شماره تلفن</string>
    <string name="edtPassword">رمز عبور</string>
    <string name="btnLogin">ورود</string>
    <string name="txtForgetPass">رمز خود را فراموش کرده اید؟</string>


    <!--Forget Pass-->
    <string name="txtYourPass">رمز شما</string>
    <string name="btnGetPass">دریافت رمز</string>
    <string name="btnBack">بازگشت</string>

    <!--Acc2 Activity-->
    <string name="edtFirstPriceAcc2">لطفا قیمت اولیه را به تومان وارد نمایید</string>
    <string name="edtPeriodWorkAcc2">لطفا بازه ی زمانی کار را به صورت ساعت وارد نمایید</string>
    <string name="btnGetWorkAcc2">تایید قیمت</string>
    <string name="btnNoGetWorkAcc2">رد کردن</string>
    <string name="txtNotingToShow">کاری برای تعیین قیمت وجود ندارد</string>

    <!--Finished Activity-->
    <string name="edtAddPrice">قیمت اضافه</string>
    <string name="edtChangePriceRes">علت تغییر قیمت</string>
    <string name="btnFinished">کار تمام است</string>
    <string name="txtNoJob">شما کاری ندارید</string>

    <!--GetMoney Activity-->
    <string name="btnGetMoney">پول دریافت شد</string>

    <!--Check Net-->
    <string name="ToastCheckNetTitle">مشکل اینترنت!</string>
    <string name="ToastCheckNetMessage">لطفا اتصال خود به اینترنت را چک کنید</string>

    <!--Menu-->
    <string name="Done">کار های تمام شده</string>
    <string name="FAQ">قوانین و مقررات</string>
    <string name="itmAboutUs">درباره ما</string>
    <string name="itmTellUs">ارسال تیکت</string>
    <string name="itmLogOff">خروج</string>

    <!--Toast-->
    <string name="ToastFillAllBlanks">لطفا تمام فیلد های مورد نظر را پر کنید</string>
    <string name="ToastTicketSend">تیکت شما با موفقیت ارسال شد</string>
    <string name="ToastTicketNotSend">تیکت شما ارسا نشد!</string>

    <!-- Answer Ticket-->
    <string name="AnswerNotTicket">به تیکت شما پاسخ داده نشده</string>
    <string name="AnswerTicket">به تیکت شما پاسخ داده شده</string>


    <!--Fragment main-->
    <string name="txtOffers">کار های پیشنهاد شده به شما</string>
    <string name="txtMore">بیشتر...</string>
    <string name="txtYes">بله</string>
    <string name="txtNo">خیر</string>
    <string name="txtAcceptOne">آیا این کار را قبول میکنید؟</string>

    <!--Mali-->
    <string name="NoJobForMoney">کاری برای دریافت پول ندارید یا هنوز قیمت توسط کاربر تایید نشده است</string>

    <!--JobsDone-->
    <string name="txtNoJobs">شما کار تمام شده ای ندارید</string>
    <string name="btnClose">بستن</string>
    <string name="txtDate">تاریخ:</string>
    <string name="txtTime">ساعت مراجعه:</string>
    <string name="txtUser">نام کارفرما:</string>
    <string name="txtPhone">شماره تماس:</string>
    <string name="txtAddress">آدرس:</string>
    <string name="txtTXT">توضیحات:</string>
    <string name="Toman">تومان</string>
    <string name="txtPrice">قیمت اولیه:</string>
    <string name="txtPeriodWork">مدت انجام کار:</string>
    <string name="Hour">ساعت</string>
    <string name="headerThisWork_DOING">کار فعلی من</string>
    <string name="headerThisWork_NoPriceTime">شما این سفارش را قبول کرده اید.\n لطفا قیمت و بازه انجام کار را پر کنید</string>
    <string name="HeaderNewWork_2">آیا این کار را قبول می کنید؟</string>


</resources>

