<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearJobDone_FinishChange"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtShowWorkFinished_FinishChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtAddPriceFinished_FinishChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtAddPrice" />


        <EditText
            android:id="@+id/edtChangePriceResFinished_FinishChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtChangePriceRes" />


        <Button
            android:id="@+id/btnFinished_FinishChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnFinished" />

    </LinearLayout>


    <TextView
        android:id="@+id/txtJobNotDone_FinishChange"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="7dp"
        android:text="@string/txtNoJob"
        android:visibility="gone" />


</LinearLayout>