<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_WaitAcc2_PoleTech"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtShowWorkAcc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/edtFirstPriceAcc2"
        android:id="@+id/edtFirstPriceAcc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:hint="@string/edtPeriodWorkAcc2"
        android:id="@+id/edtPeriodWorkAcc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:weightSum="10"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/btnNoGetWorkAcc2"
            android:onClick="btnNoGetWorkAcc2"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btnGetWorkAcc2"
            android:layout_weight="4"
            android:onClick="btnGetWorkAcc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



</LinearLayout>