<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Tab_FinishWork_PolTech"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtShowWorkFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtAddPriceFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtAddPrice" />


    <EditText
        android:id="@+id/edtChangePriceResFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtChangePriceRes" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnFinished"
        android:text="@string/btnFinished" />

</LinearLayout>