<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtNoJob_thisWork"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="7dp"
        android:text="@string/txtNoJob"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearFragment_thisWork"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtSubjectsDoing_thisWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_offermain_subject"
            android:padding="7dp" />

        <TextView
            android:id="@+id/txtHaveJob_thisWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:text="کار شما!"
            android:visibility="visible" />


        <LinearLayout
            android:id="@+id/linearacc2_thisWork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">


            <EditText
                android:id="@+id/edtFirstPriceAcc2_thisWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtFirstPriceAcc2" />


            <EditText
                android:id="@+id/edtPeriodWorkAcc2_thisWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtPeriodWorkAcc2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/btnNoGetWorkAcc2_thisWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/btnNoGetWorkAcc2" />

                <Button
                    android:id="@+id/btnGetWorkAcc2_thisWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/btnGetWorkAcc2" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>