<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login_PoleTech"
    android:orientation="vertical">

    <!--login-->
    <LinearLayout
        android:id="@+id/LinearLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtPhoneNumLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:text="1"
            android:hint="@string/edtPhoneNumber" />

        <EditText
            android:id="@+id/edtPassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1"
            android:hint="@string/edtPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnForgetPass"
                android:text="@string/btnForgetPass" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnLoginOnClick"
                android:text="@string/btnLogin" />

        </LinearLayout>

    </LinearLayout>

    <!--Forget Password-->
    <LinearLayout
        android:id="@+id/LinearRegForgetPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/edtPhoneNumberForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:hint="@string/edtPhoneNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnBackOnClickForgetPass"
                android:text="@string/btnBack" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnGetPass"
                android:text="@string/btnGetPass" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>